# Guide-Python_Packages

./: README.md
chapters/0-Setup/: README.md
chapters/1-Library/: README.md
chapters/1-Library/mandy/: sample.py
chapters/2-Scripts/: README.md  pyproject.toml
chapters/2-Scripts/mandybrot/: sample.py
chapters/2-Scripts/scripts/: run.py
chapters/3-Plots/: README.md  pyproject.toml
chapters/3-Plots/scripts/: run.py
chapters/4-Images/: README.md  pyproject.toml
chapters/4-Images/mandybrot/: colour.py
chapters/4-Images/scripts/: run.py
chapters/5-Colours/: README.md  pyproject.toml
chapters/5-Colours/mandybrot/: __init__.py  sample.py
chapters/6-Progress_Bar/: README.md  pyproject.toml
chapters/6-Progress_Bar/mandybrot/: colour.py
chapters/7-Publish/: README.md
chapters/7-Publish/mandybrot/: sample.py
chapters/7-Publish/scripts/: run.py
chapters/setup/: README.md  pyproject.toml
